# jarvis-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.prod.yaml  env.template  pyproject.toml  run-local.sh  run-prod.sh  run-tests.sh  run.sh
.github/workflows/: docker-build-push.yml  test.yml
alembic/: env.py
alembic/versions/: 002_seed_settings.py
jarvis_mcp/: __init__.py  __main__.py  config.py  server.py
jarvis_mcp/db/: __init__.py  models.py  session.py
jarvis_mcp/services/: __init__.py  command_definitions.py  command_service.py  conversion_service.py  datetime_service.py  docker_service.py  math_service.py  settings_definitions.py  settings_service.py
jarvis_mcp/tools/: __init__.py  command.py  conversion.py  database.py  datetime.py  debug.py  docker.py  health.py  logs.py  math.py  tests.py
tests/: conftest.py  test_command_service.py  test_config.py  test_conversion_service.py  test_datetime_service.py  test_docker_service.py  test_math_service.py  test_server.py  test_settings.py  test_tools_command.py  test_tools_conversion.py  test_tools_database.py  test_tools_datetime.py  test_tools_debug.py  test_tools_docker.py  test_tools_health.py  test_tools_logs.py  test_tools_math.py  test_tools_tests.py
